# aigs

./: .envrc  .gitignore  .gitmodules  README.md  main.py  nn.py  pyproject.toml
aigs/: __init__.py  games.py  types.py  utils.py
conf/: config.yaml
docs/: conf.typ  drl.typ  llm.typ  mcts.typ  qd.typ  zotero.bib
labs/: __init__.py  ann.py  mcts.py  qd.py
