[project]
name = "aigs"
version = "0.1.0"
description = "Package the Artificial Intelligence in Games and Simulation course"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cma>=4.3.0",
    "equinox>=0.12.2",
    "flax>=0.10.7",
    "grpcio>=1.73.0",
    "gym-super-mario-bros>=7.4.0",
    "gymnasium>=1.1.1",
    "jax>=0.6,<0.7",
    "jaxlib>=0.5.3",
    "jumanji>=1.1.1",
    "mctx>=0.0.5",
    "mlxp>=1.0.4",
    "pettingzoo>=1.25.0",
    "pgx>=2.6.0",
    "pygame>=2.6.1",
    "qdax>=0.5.0",
    "pcgym @ git+https://github.com/syrkis/pcgym.git",
    # "scenic @ git+https://github.com/google-research/scenic.git",
]

    # "gym-pcgrl @ git+https://github.com/amidos2006/gym-pcgrl.git",

[tool.setuptools.packages.find]
include = ["aigs*"]

[tool.ruff]
line-length = 120
